fix: change gap vw to px

--- a/online-zoo/pages/main/style/blocks/_07-footer.scss
+++ b/online-zoo/pages/main/style/blocks/_07-footer.scss
@@ -97,7 +97,8 @@
         grid-row: 3/4;
         align-self: end;
         ul {
-            gap: 3.6vw;
+            // gap: 3.6vw;
+            gap: 58px;
         }
     }
     &_design {
